[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]
radius = 0.3
height = 1.3

[sub_resource type="CapsuleShape" id=2]
radius = 0.3
height = 0.28

[sub_resource type="CapsuleMesh" id=3]
radius = 0.3
mid_height = 1.3

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.2, 0.1, 0.2 )

[node name="Player" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 1 )

[node name="StandShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.95, 0 )
shape = SubResource( 1 )

[node name="CrouchShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.44, 0 )
shape = SubResource( 2 )
disabled = true

[node name="Body" type="Spatial" parent="."]

[node name="Scaler" type="Spatial" parent="Body"]

[node name="MeshInstance" type="MeshInstance" parent="Body/Scaler"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.95, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="Camera" type="Camera" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.59933, 0 )
current = true

[node name="RightRay" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
enabled = true
cast_to = Vector3( 0.5, 0, 0 )

[node name="LeftRay" type="RayCast" parent="Body"]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0.5, 0 )
enabled = true
cast_to = Vector3( 0.5, 0, 0 )

[node name="FrontRay" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.9, -0.4 )
enabled = true
cast_to = Vector3( 0, -1.9, 0 )

[node name="Tween" type="Tween" parent="."]

[node name="StandCheck" type="Area" parent="."]
input_ray_pickable = false
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="StandCheck"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.78922, 0 )
shape = SubResource( 4 )
[connection signal="body_entered" from="StandCheck" to="." method="_on_StandCheck_body_entered"]
[connection signal="body_exited" from="StandCheck" to="." method="_on_StandCheck_body_exited"]
